# RayTracer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake
src/: CMakeLists.txt  main.cpp  sphere.cpp  teapot.cpp
src/raytracer/: CMakeLists.txt  Intersection.cpp  Intersection.h  Ray.cpp  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h
src/raytracer/camera/: Camera.cpp  Camera.h
src/raytracer/intersections/: IIntersect.cpp  IIntersect.h  Intersection.cpp  Intersection.h  Intersections.cpp  Intersections.h
src/raytracer/lights/: PointLight.cpp  PointLight.h
src/raytracer/materials/: Material.cpp  Material.h
src/raytracer/misc/: AABB.cpp  AABB.h  Computations.cpp  Computations.h  Shader.cpp  Shader.h
src/raytracer/parser/: ObjParser.cpp  ObjParser.h
src/raytracer/patterns/: CheckersPattern.cpp  CheckersPattern.h  LinearGradientPattern.cpp  LinearGradientPattern.h  Pattern.cpp  Pattern.h  RadialGradientPattern.cpp  RadialGradientPattern.h  RingPattern.cpp  RingPattern.h  StripePattern.cpp  StripePattern.h  TestPattern.cpp  TestPattern.h  TextureMap.cpp  TextureMap.h  UVCheckers.cpp  UVCheckers.h
src/raytracer/ray/: Ray.cpp  Ray.h
src/raytracer/shapes/: Cone.cpp  Cone.h  Csg.cpp  Csg.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Group.cpp  Group.h  Plane.cpp  Plane.h  Shape.cpp  Shape.h  SmoothTriangle.cpp  SmoothTriangle.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/raytracer/world/: World.cpp  World.h
src/sfml/: CMakeLists.txt  test.cpp
src/utils/: CMakeLists.txt  Canvas.cpp  Canvas.h  CanvasPrinter.cpp  CanvasPrinter.h  Color.cpp  Color.h  Math.h  Matrix.cpp  Matrix.h  Tuple.cpp  Tuple.h
test/: CMakeLists.txt  aabb_tests.cpp  camera_tests.cpp  cones_tests.cpp  csg_tests.cpp  cubes_tests.cpp  cylinders_tests.cpp  groups_tests.cpp  intersections_tests.cpp  lights_tests.cpp  materials_tests.cpp  obj_files_tests.cpp  patterns_tests.cpp  planes_tests.cpp  rays_tests.cpp  shapes_tests.cpp  smooth_triangles_tests.cpp  spheres_tests.cpp  tests.cpp  transformations_tests.cpp  triangles_tests.cpp  utils_canvas_tests.cpp  utils_color_tests.cpp  utils_matrix_tests.cpp  utils_matrix_transformation_tests.cpp  utils_tuple_tests.cpp  world_tests.cpp
